# Hackathon-02-phase-02-Todo

./: .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  vercel.json
.claude/: settings.local.json
.claude/agents/: README.md  orchestrator.md  phase1-console-app.md  phase2-fullstack-web.md  phase3-ai-chatbot.md  phase4-kubernetes.md  phase5-cloud-deployment.md  speckit-architect.md
.claude/skills/: create-mcp-tool.md  create-phase1-spec.md  create-phr.md  create-rest-api-endpoint.md  implement-agent-behavior.md  implement-crud-operation.md  implement-jwt-auth.md  setup-database-schema.md  validate-console-ui.md  validate-phase-transition.md
.specify/memory/: constitution.md
backend/: Dockerfile  migrate_add_name_to_users.py  requirements.txt  test_agent_execution.py  test_agent_import.py
backend/migrations/: 001_create_tasks.sql  002_create_users.sql  003_create_conversations.sql  004_create_messages.sql
backend/src/: main.py
frontend/: next.config.ts  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  page.tsx
frontend/lib/: AuthProvider.tsx  auth.ts
phase1-console-app/: pyproject.toml
phase1-console-app/src/: __init__.py  main.py
phase1-console-app/src/models/: __init__.py  task.py
phase1-console-app/src/storage/: __init__.py  task_storage.py
phase1-console-app/src/ui/: __init__.py  console_ui.py
phase1-console-app/tests/integration/: __init__.py  test_app_integration.py
phase1-console-app/tests/unit/: test_console_ui.py  test_task_model.py  test_task_storage.py
phase2-fullstack-web/: SETUP_GUIDE.md  run_project.ps1
phase2-fullstack-web/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
phase2-fullstack-web/backend/src/: main.py
phase2-fullstack-web/backend/src/api/: __init__.py  auth.py
phase2-fullstack-web/backend/src/models/: __init__.py
phase2-fullstack-web/backend/src/services/: __init__.py
phase2-fullstack-web/frontend/: .dockerignore  .env.example  lint_output.txt  package-lock.json  tailwind.config.ts
phase3-ai-chatbot/: README.md
phase3-standalone/: SETUP_PHASE3.md
phase3-standalone/backend/: .dockerignore  requirements.txt
phase3-standalone/frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
phase4-kubernetes/docker/: docker-compose.yml
phase4-kubernetes/k8s/: DEPLOYMENT.md  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  secrets.local.yaml  secrets.yaml
phase5-cloud-deployment/: README.md
specs/001-phase1-console-app/: plan.md  spec.md  tasks.md
specs/002-phase2-fullstack-web/: plan.md  (+2 more)
(+168 files in other folders)
